# ldeo_bpr

./: .gitignore  APGlogger.ini  APGlogger.ini.bak20190224  ParosAPG.ini  ReadMe.md  apg_read-hold20181127.py  apg_read.py  apg_read_20181126.py  apg_read_20181128.py  apg_read_20181202.py  apg_read_20181207.py  apg_read_20181214.py  apg_read_20200811.py  apg_read_20200826.py  apg_read_20201130.py  apg_read_20201201_before change to epoch in ms.py  apg_read_20201202.py  apg_read_CSAC_20181123.py  apg_read_CSAC_20181124.py  apg_read_CSAC_20181125.py  apg_read_SeaScan_20181123.py  apg_read_SeaScan_20181125.py  apg_read_fixed_temperature.py  apg_read_ignore_timestamps.py  apg_read_serial.bat  apg_read_serial.py  apg_read_serial_20200819.py  apg_read_serial_20210729.py  apg_read_sync.py  apg_read_working.py  environment.yml  gns_bpr_ranging_log_2021-10-13.py  gns_bpr_ranging_log_2021-10-14.py  gns_bpr_ranging_log_2021-10-15.py  gns_bpr_ranging_log_2021-10-16.py  install.sh  plot_bpr_csv.py  pyproject.toml  ruff.toml  test.sh
example_cli_scripts/: apg_read_serial.bat  run_apg_read.bat
ldeo_bpr/: __init__.py  _version.py  apg_read.py  apg_read_serial.py  arg_parser.py  constants.py  dt64_utils.py  extract_records.py  logger.py  math_utils.py  paros.py  plot_bpr_csv.py  raw_data.py  raw_file.py  version.py
tests/: manual_test_argparse.py  manual_test_argparse.sh  pyproject.toml  test_arg_parser.py
working/: APG Data workings.xlsx  APG freq examples.xlsx  APG freq insert 20181129.xlsx  APG freq insert 20181206.xlsx  APG freq insert example 2.xlsx  APG freq insert example 3.xlsx  APG freq insert example 4.xlsx  APG freq insert example.xlsx  APG raw binary example at freq insertion.txt  APG raw binary example.txt  APG_clock_sync.py  summary_ticks.csv  summary_ticks.csv.xlsx  summary_ticks_20181206.txt  summary_ticks_20181206.xlsx
working/nmea_tracking/: Serial Response Examples.txt  raw_response.txt  run_apg_read.bat  run_apg_read_serial.bat  tcp-nmea-raw_logger.py  tcp-nmea-tracker.py  udp-nmea-raw_logger.py
