# Development started by Neville Palmer, GNS Science on 2018/11/17.

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ldeo_bpr"
dynamic = ["version", "readme"]
requires-python = ">= 3.9"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.22",
    "obspy>=1.4",
    "pyserial>=3.5",
    "scipy>=1.7"
]
authors = [{name= "Neville Palmer", email = "n.palmer@gns.cri.nz"}]
description = """\
    A program for extracting raw data from BPR data loggers \
    manufactured by Lamont Doherty Earth Observatory (LDEO), Columbia \
    University.\
    """
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = ["bpr", "apg", "obp", "absolute pressure", "seafloor"]

[project.scripts]
apg_read = "ldeo_bpr.apg_read:main"
apg_read_serial = "ldeo_bpr.apg_read_serial:main"


[tool.setuptools]
py-modules = ["ldeo_bpr"]

[tool.setuptools.dynamic]
readme = {file = ["ReadMe.md"], content-type = "text/markdown"}
version = {attr = "ldeo_bpr.version.__version__"}

[project.optional-dependencies]
tests = [
    'pytest'
]